--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚗</text></svg>" />
     <title>Jangase Driving Academy - Professional Driving Lessons</title>
     <meta name="description" content="Learn to drive with confidence at Jangase Driving Academy. Professional instructors, modern vehicles, flexible scheduling. Class B, Commercial, and Motorcycle licenses available." />
     <meta name="author" content="Jangase Driving Academy" />
